--- a/ui/index.html
+++ b/ui/index.html
@@ -4,6 +4,7 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <h2> first web app</h2>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
