--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
        <center> <h2> first web app</h2></center>
-	   <h4><center>welcome</h4></center>
+	   <h4><center>welcome</center></h4>
         <div class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
