[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -7,13 +7,13 @@
         
         .container
         {
-                max-width: 800;
-                padding-top: 50px;
-                margin: 0 auto;
-                color: yellow;
-                padding-left: 50;
-                padding-right: 20;
-                background-color: floralwhite;
+                   max-width: 800;
+    padding-top: 50px;
+    margin: 0 auto;
+    color: gray;
+    padding-left: 50;
+    padding-right: 20;
+    background-color: floralwhite;
             
         }
     </style>
