[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,10 @@
         <div class="center text-big bold">
             Hi! I am gokul........
         </div>
+        <script>
+          alert("hiii scripttt");
+        </script>
+     
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
