--- a/ui/index.html
+++ b/ui/index.html
@@ -6,7 +6,7 @@
     <body>
        <center> <h2> first web app</h2></center>
 	   <h4><center>welcome</center></h4>
-        <div class="center">
+        <div id="modi" class="center">
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
