--- a/ui/index.html
+++ b/ui/index.html
@@ -7,16 +7,17 @@
        <center> <h2> first web app</h2></center>
 	   <h4><center>welcome</center></h4>
         <div id="modi" class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+            <img src="C:\Users\hp\Desktop\aaa.jpg" class="img-medium"/>
         </div>
+        <div><h4>Personal</h4><hr/>
+        Hi iam gokul....
+        </div>
+        <hr/>
         <br>
-        <div id ="main-text" class="center text-big bold">
-            Hi! I am gokul........
-        </div>
-        <script>
-          alert("hiii scripttt");
-        </script>
-     
+        <div><h4>Profession</h4>
+            Hi! I am a graduate..
+            </div>
+      
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
