[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,9 +11,9 @@
        <div class="container"> <div><h4>Personal</h4><hr/>
         Hi iam gokul....
         </div>
-        <hr/>
+       
         <br>
-        <div><h4>Profession</h4>
+        <div><h4>Profession</h4><hr/>
             Hi! I am a graduate..
             </div>
       </div>
