--- a/ui/index.html
+++ b/ui/index.html
@@ -19,7 +19,8 @@
                 </div>
                 <div class="footer">
                    This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times. 
-                    
+                  <input type='text' id='name' placeholder='name'><input/>
+                  <input type='submit' value='submit'><input/>
                 </div>
       </div>
         <script type="text/javascript" src="/ui/main.js">
