--- a/ui/index.html
+++ b/ui/index.html
@@ -18,8 +18,9 @@
                 Hi! I am a graduate..
                 </div>
                 <div class="footer">
-                   This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times. 
-                  <input type='text' id='name' placeholder='name'><input/>
+                   This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times.<br>
+                   <hr/>
+                  <input type='text' id='name' placeholder='name'><input/><br>
                   <input type='submit' value='submit'><input/>
                 </div>
       </div>
