--- a/ui/index.html
+++ b/ui/index.html
@@ -14,8 +14,8 @@
             </div>
            
             <br>
-                <div><h4>Profession</h4><hr/>
-                Hi! I am a graduate..
+                <div><h4>Profession</h4>
+                Hi! I am a graduate..<hr/>
                 </div>
                 <div class="footer">
                    This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times.
