--- a/ui/index.html
+++ b/ui/index.html
@@ -18,7 +18,7 @@
                 Hi! I am a graduate..<hr/>
                 </div>
                 <div class="footer">
-                   This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times.<br/>
+                   This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times.<br>
                    <hr/>
                   <input type="text" id="name" placeholder="name"><input/>
                   <input type="submit" value="submit"><input/>
