--- a/ui/index.html
+++ b/ui/index.html
@@ -20,8 +20,8 @@
                 <div class="footer">
                    This button <button id='button'>clickme</button>has been clicked <span id='count'>0 </span>times.<br>
                    <hr/>
-                  <input type="text" id="name" placeholder="name"><input/>
-                  <input type="submit" value="submit"><input/>
+                  <input type="text" id="name" placeholder="name"></input>
+                  <input type="submit" value="submit"></input>
                 </div>
       </div>
         <script type="text/javascript" src="/ui/main.js">
