--- a/ui/index.html
+++ b/ui/index.html
@@ -22,6 +22,12 @@
                    <hr/>
                   <input type="text" id="name" placeholder="name"></input>
                   <input type="submit" value="submit"></input>
+                  <ul>
+                     <li>name1</li>
+                     <li>name2</li>
+                     <li>name3</li>
+                     
+                  </ul>
                 </div>
       </div>
         <script type="text/javascript" src="/ui/main.js">
